<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/sort_section_title"
        android:enabled="false" />

    <group
        android:id="@+id/group_sort_mode"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sort_date"
            android:title="@string/sort_date" />
        <item
            android:id="@+id/sort_name"
            android:title="@string/sort_name" />
        <item
            android:id="@+id/sort_size"
            android:title="@string/sort_size" />
    </group>

    <item
        android:title="@string/sort_order_section_title"
        android:enabled="false" />

    <group
        android:id="@+id/group_sort_order"
        android:checkableBehavior="single">
        <item
            android:id="@+id/order_asc"
            android:title="@string/sort_asc" />
        <item
            android:id="@+id/order_desc"
            android:title="@string/sort_desc" />
    </group>

</menu>
