<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_favorite"
        android:title="@string/menu_favorite_add"
        android:icon="@drawable/ic_star" />

    <item
        android:id="@+id/action_share"
        android:title="@string/menu_share"
        android:icon="@android:drawable/ic_menu_share"/>
    <item
        android:id="@+id/action_zip"
        android:title="@string/menu_zip"
        android:icon="@drawable/ic_zip" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/menu_rename"
        android:icon="@android:drawable/ic_menu_edit" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"/>
    <item
        android:id="@+id/action_details"
        android:title="@string/menu_details"
        android:icon="@android:drawable/ic_menu_info_details"/>
</menu>
