<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_copy"
        android:title="@string/menu_copy"
        android:icon="@android:drawable/ic_menu_save" />
    <item
        android:id="@+id/action_move"
        android:title="@string/menu_move"
        android:icon="@android:drawable/ic_menu_send" />

    <item
        android:id="@+id/action_zip"
        android:title="@string/menu_zip"
        android:icon="@android:drawable/ic_menu_agenda" />

    <item
        android:id="@+id/action_selection_favorite"
        android:title="@string/menu_favorite_add"
        android:icon="@drawable/ic_star" />

    <item
        android:id="@+id/action_selection_rename"
        android:title="@string/menu_rename"
        android:icon="@android:drawable/ic_menu_edit" />

    <item
        android:id="@+id/action_selection_details"
        android:title="@string/menu_details"
        android:icon="@android:drawable/ic_menu_info_details" />

    <item
        android:id="@+id/action_selection_exclude_folder"
        android:title="@string/menu_exclude_folder_from_recent"
        android:icon="@android:drawable/ic_menu_close_clear_cancel" />
</menu>
