<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_internal_storage"
            android:icon="@drawable/ic_folder_solid"
            android:title="@string/internal_storage" />

        <item
            android:id="@+id/nav_download"
            android:icon="@android:drawable/stat_sys_download"
            android:title="@string/downloads" />

        <item
            android:id="@+id/nav_recent"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/recent_files" />
    </group>

    <item
        android:id="@+id/nav_favorites_section"
        android:title="@string/drawer_favorites">
        <menu>
        </menu>
    </item>

</menu>
